--- a/public/assets/back/css/shift.css
+++ b/public/assets/back/css/shift.css
@@ -1,1 +1,27 @@
-
+input[type=submit] {
+	line-height: 1.2em;
+	padding: 8px 16px;
+	background-color: #fff;
+	border-radius: 5px;
+	font-size: 1em;
+	margin-left: 20px;
+}
+.section_title{	
+	line-height: 3.5em;
+	padding: 0 10px;
+}
+.section_title select{
+	height: 2em;
+	background-color: #fff;
+	color: #000;
+}
+#switch{
+	font-weight: normal;
+	margin-top: 7px;
+}
+input[type=text]{
+	height: 2.4em;
+}
+.staffs{
+	width:180px;
+}
