--- a/public/assets/back/shift/shift2019080301.css
+++ b/public/assets/back/shift/shift2019080301.css
@@ -31,3 +31,10 @@ input[type=text]{
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
 	vertical-align: center;
 }
+#wrapper{
+	padding: 5%;
+}
+#title{
+	font-size: 1.5em;
+	font-weight: bold;
+}
