--- a/public/assets/back/shift/index.css
+++ b/public/assets/back/shift/index.css
@@ -68,8 +68,9 @@ input[type=submit] {
 	margin-top: 2px;
 }
 input[type=text]{
-	font-size: 18px;
-	line-height: 2em;
+	font-size: 16px;
+	/*transform: scale(0.8);*/
+	line-height: 1.6em;
 	border-radius: 8%;
 	border: 1px solid #999;
 }
